SERVER-9027: allow dbref shard keys